Complete UI redesign: Real-time quality score and user-centric experience

--- a/popup.html
+++ b/popup.html
@@ -783,7 +783,7 @@
                 <div class="settings-item">
                     <div class="settings-info">
                         <div class="settings-title">OpenAI API Key (Premium)</div>
-                        <div class="settings-description">Optional: Your API key for enhanced AI optimization. <a href="https://platform.openai.com/api-keys" target="_blank" style="color: #667eea; text-decoration: none;">Get your key here</a></div>
+                        <div class="settings-description">Optional: Add your OpenAI API key for real-time, context-aware prompt optimization (no hardcoded templates!). <a href="https://platform.openai.com/api-keys" target="_blank" style="color: #667eea; text-decoration: none;">Get your key here</a></div>
                     </div>
                     <input type="password" id="openai-api-key" placeholder="sk-..." style="width: 200px; padding: 6px; border: 1px solid #ddd; border-radius: 4px; font-size: 12px;">
                 </div>
