Fix settings button in header

--- a/popup.html
+++ b/popup.html
@@ -724,6 +724,12 @@
 </head>
 <body>
     <div class="header">
+        <div class="header-actions">
+            <div class="settings-btn" id="quick-settings-btn" title="Open Settings">
+                <span>⚙️</span>
+                <span>Settings</span>
+            </div>
+        </div>
         <div class="version-badge">v1.0</div>
         <div class="logo">
             <div class="logo-icon">🔍</div>
